# python_template

./: .cruft.json  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  BASE_DIR  CONTRIBUTING.md  Dockerfile  Dockerfile.heredoc  Dockerfile.og  Makefile  README.md  bootstrap  ci_dir.py  cookiecutter.json  docker-compose.yml  gitleaks.toml  gunicorn.conf.py  hello.py  justfile  main.py  pyproject.toml  qr_gen.py  requirements.txt  startup.sh  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: auto_approve.yml  auto_merge.yml  codeql-analysis.yml  codeql_analysis.yml  main.yml  push.yml  python_test.yml  run_script.yml
.github/workflows/hooks/: pre-commit.py
boilerplate/: qr_gen.py
data_science/jupyter/: .env.example  docker-compose.yml  refactor-wine-quality.ipynb  requirements.txt
devops/terraform/: .tool-versions  main.tf  variables.tf
devops/tilt/: .dockerignore  Dockerfile  README.md  Tiltfile  app.py  kubernetes.yml  requirements.txt
django/: Dockerfile  compose.yml  requirements.txt
docs/: conf.py
hooks/: post_gen_project.py  pre_gen_project.py
jupyter/: .dockerignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt  startup.sh
markdown/: asdf.md  django.md  docker.md  gh_actions.md  just.md  kubernetes.md  mongo.md  pip.md  pipx.md  playwright.md  poetry.md  precommit.md  sauce.md  terraform.md  wsl.md
nosql/mongo/: .env.example  Dockerfile  docker-compose.yml  mongo_mvp.py  package-lock.json  package.json  pyproject.toml  requirements.txt
nosql/redis/: redis.conf.example
sql/postgres/: .dockerignore  .env.example  Dockerfile  Dockerfile.postgres  Makefile  app.py  docker-compose.yml  requirements.txt
terraform/: .terraform.lock.hcl  main.tf
tests/: test_bake_project.py
webdev/django/: Dockerfile  compose.yml  manage.py  requirements.txt
webdev/django/composeexample/: settings.py
{{cookiecutter.project_slug}}/: .editorconfig  LICENSE
{{cookiecutter.project_slug}}/.github/: FUNDING.yml
{{cookiecutter.project_slug}}/.github/workflows/: auto_merge.yml  ci.yml  cookiecutter.yml  docker.yml  echo_secret.yml  python_test.yml  run_script.yml
{{cookiecutter.project_slug}}/.github/workflows/hooks/: pre-commit.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
