[tool.poetry]
name = "python_template"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
bs4 = "^0.0.1"
pandas = "^1.4.0"
playwright = "^1.18.1"
requests-cache = "^0.9.1"
GitPython = "^3.1.26"
pyee = "^9.0.4"
websockets = "^10.3"
Django = "^4.0.6"
pymongo = "^4.2.0"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
