[tool.poetry]
name = "python_template"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10.6"
requests = "^2.27.1"
bs4 = "^0.0.1"
pandas = "^1.4.0"
playwright = "^1.18.1"
requests-cache = "^0.9.1"
GitPython = "^3.1.26"
pyee = "^9.0.4"
websockets = "^10.3"
Django = "^4.0.6"
pymongo = "^4.2.0"
dnspython = "^2.2.1"
flake8 = "^5.0.4"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"

[tool.black]
line-length = 130
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[flake8]
max-line-length = 130
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.isort]
atomic = true
profile = "black"
line_length = 130
skip_gitignore = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
